=================
Changes for Crate
=================

Unreleased
==========

2017/04/03 1.0.6
================

 - Fixed issue which prevents blob directories from being removed after a
   ``drop blob table`` command when a custom blob location is configured.

 - Fixed an issue that caused conditions like ``not x = any( )`` to not 
   find empty lists when used in WHERE clauses.

 - Improved error handling when using LIMIT/OFFSET that exceed Integer range

 - Fixed a race condition in an unsorted right outer join with one empty table
   that could lead to incorrect results.

 - Division by aggregation that resulted in 0
   (e.g. SELECT max(long_col) / min(long_col) from t) now correctly returns
   ArtithmeticException and does not hang any more.

 - Fixed a race condition in `KILL` statements which lead to a memory leak.

 - Fixed an issue that prevent a node from starting on Windows if the
   sigar-plugin is removed.

2017/03/14 1.0.5
================

 - Fix: Case sensivity of aliases wasn't handled correctly.
   Aliases are now fully case sensitive.

 - Fixed a race condition that could have caused that not all columns were
   written to the metadata when a lot of new dynamic columns were generated
   concurrently.

 - Fixed an issue that caused joins on `information_schema.columns` to produce
   a wrong result if `information_schema.columns` was used as the right table.

2017/02/24 1.0.4
================

 - Fixed an issue which caused restoring a whole partitioned table from a
   snapshot to fail.

 - Fixed low/high disk-based shard allocation watermark checks. The checks
   treated the disk watermark settings as non-runtime. Therefore, new values
   for these settings were ignored.

 - Fixed the low/high disk-based shard allocation watermark settings. When
   a percentage value is provided for either of settings, it won't be converted
   to an absolute byte value.

 - Fix: Index columns based on string arrays are correctly populated with values.
