@@ -922,11 +922,11 @@ settings::
 ::
 
     cr> select settings['stats'] from sys.cluster;
-    +-------------------------------------------------------------------------------------------------+
-    | settings['stats']                                                                               |
-    +-------------------------------------------------------------------------------------------------+
-    | {"enabled": true, "jobs_log_size": 2048, "operations_log_size": 8192, "service.interval": "1h"} |
-    +-------------------------------------------------------------------------------------------------+
+    +------------------------------------------------------------------------------------------------------+
+    | settings['stats']                                                                                    |
+    +------------------------------------------------------------------------------------------------------+
+    | {"enabled": true, "jobs_log_size": 2048, "operations_log_size": 8192, "service": {"interval": "1h"}} |
+    +------------------------------------------------------------------------------------------------------+
     SELECT 1 row in set (... sec)
 
 Using the ``RESET`` statement, a setting will be reset to either on
@@ -938,11 +938,11 @@ node startup defined configuration file value or to its default value::
 ::
 
     cr> select settings['stats'] from sys.cluster;
-    +---------------------------------------------------------------------------------------------------+
-    | settings['stats']                                                                                 |
-    +---------------------------------------------------------------------------------------------------+
-    | {"enabled": false, "jobs_log_size": 2048, "operations_log_size": 10000, "service.interval": "1h"} |
-    +---------------------------------------------------------------------------------------------------+
+    +--------------------------------------------------------------------------------------------------------+
+    | settings['stats']                                                                                      |
+    +--------------------------------------------------------------------------------------------------------+
+    | {"enabled": false, "jobs_log_size": 2048, "operations_log_size": 10000, "service": {"interval": "1h"}} |
+    +--------------------------------------------------------------------------------------------------------+
     SELECT 1 row in set (... sec)
 
 ``RESET`` can also be done on objects::
@@ -953,11 +953,11 @@ node startup defined configuration file value or to its default value::
 ::
 
     cr> select settings['stats'] from sys.cluster;
-    +----------------------------------------------------------------------------------------------------+
-    | settings['stats']                                                                                  |
-    +----------------------------------------------------------------------------------------------------+
-    | {"enabled": false, "jobs_log_size": 10000, "operations_log_size": 10000, "service.interval": "1h"} |
-    +----------------------------------------------------------------------------------------------------+
+    +---------------------------------------------------------------------------------------------------------+
+    | settings['stats']                                                                                       |
+    +---------------------------------------------------------------------------------------------------------+
+    | {"enabled": false, "jobs_log_size": 10000, "operations_log_size": 10000, "service": {"interval": "1h"}} |
+    +---------------------------------------------------------------------------------------------------------+
     SELECT 1 row in set (... sec)
 
 
