@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Correctly expose ``stats.service.interval`` in the ``sys.cluster``
+   table.
+
 2017/04/03 1.0.6
 ================
 
